# DiscountMate_new

./: .firebaserc  .gitignore  Aus_grocery_synthetic_dataset.ipynb  CART_OPTIMISATION.ipynb  DiscountMate_new.code-workspace  DiscountMate_priceprediction_ANN.ipynb  DiscountMate_priceprediction_CNN.ipynb  Lean Canvas.pptx  ML_INTEGRATION_SUMMARY.md  MLppNbtb.ipynb  Product_Brand_Analysis_Tool.ipynb  README.md  Rutik_Tank_RNN_model_price_prediction.ipynb  SETUP.md  SIT764_synthetic_data.ipynb  TfidfVectorizer.ipynb  TimeSensitiveDealPredictionModel(ARIMA).ipynb  access_postgres.md  docker-compose.yml  firebase.json  fortnightly_discounts.csv  homepage.html  package-lock.json  package.json  specials-page-updates.patch  synthetic_Coles_data.csv
Backend/: .dockerignore  .env  (+24 more)
DE/etl-pipeline/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  ruff.toml
DE/etl-pipeline/common/: __init__.py  cli.py  db.py  duckdb_utils.py  job_models.py  normalization.py  paths.py
DE/etl-pipeline/config/: __init__.py  config.yaml.example  deploy.yaml  deploy.yaml.example  local.yaml.example  settings.py
DE/etl-pipeline/docs/: silver_layer.md
DE/etl-pipeline/features/: __init__.py
DE/etl-pipeline/features/example/: __init__.py  job.py
DE/etl-pipeline/features/feature_examples/: __init__.py  demo_transform.sql  job.py
DE/etl-pipeline/features/products/: __init__.py  normalization.py  run.py
DE/etl-pipeline/migrations/: env.py
DE/ingestion-pipeline/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  rename_csv_filenames.sh  ruff.toml
DE/ingestion-pipeline/config/: __init__.py  logging.py  settings.py  telemetry.py
DE/ingestion-pipeline/storage/: __init__.py  gcs.py  local.py  manager.py  models.py
DE/ingestion-pipeline/util/: __init__.py  common.py  runtime.py
DE/silver/reference_duckdb_uv_pipeline/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
(+1249 files in other folders)
