[project]
name = "reference-duckdb-uv-pipeline"
version = "0.1.0"
description = "Reference Silver pipeline using uv, DuckDB, and PostgreSQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.1",
    "psycopg[binary]>=3.2.10",
    "pytz>=2024.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
